--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,41 @@
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
+# Archivos del sistema
+.DS_Store
+Thumbs.db
+desktop.ini
 
-# Environment
-.env
-.venv
-env/
-venv/
-
-# IDE
+# Entorno de desarrollo
 .vscode/
 .idea/
+*.sublime-project
+*.sublime-workspace
 
-# Logs
+# Dependencias y módulos
+node_modules/
+npm-debug.log
+yarn-error.log
+yarn-debug.log
+package-lock.json
+
+# Archivos temporales
 *.log
+*.tmp
+*.temp
+.cache/
+.tmp/
 
-# Local development
-.DS_Store
+# Archivos compilados
+dist/
+build/
+.vercel/
+
+# Variables de entorno locales
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Otros
+*.bak
+*.swp
+*~
